--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="column">
           <div class="select">
-            <select id="indicators-select" class="select"></select>
+            <select id="indicators-select"></select>
           </div>
         </div>
         <div class="column is-flex levels">
